--- a/.gitignore
+++ b/.gitignore
@@ -148,6 +148,5 @@ application.properties
 *.properties
 application-online.properties
 application-test.properties
-AESUtil.class
-MD5Util.class
-RSAUtil.class
+
+**/util
