--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
             <artifactId>fastjson</artifactId>
             <version>2.0.7</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.19.2</version>
+        </dependency>
     </dependencies>
 
     <modules>
